spelling errors fixed

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <!-- About Section Content -->
 
       <div class="lead text-justify text-black mb-5">
-          <p> Hello! I am a second year engineering student studying Bachelors of Technology (B.Tech.) in Electrical and Electronics Engineering (EEE) from Visvesvaraya National Institute of Technology (VNIT), Nagpur . My areas of interest include <b>image processing</b>, <b>traditional computer vision</b>, <b>signal processing</b> and an emerging interest in the applications of <b>deep learning in signal processing applications</b>. I have been working in the field of traditional computer vision or quite a while now and have done many projects and a publication in these fields. I have been doing projects in order to understand the fundamentals and the mathematics behind them. Planning a career in academia, I have always enjoyed learning from my projects and then apply them in various reserach problems. During my free time, I love to play chess, listen to music and play games on my computer.</p>
+          <p> Hello! I am a second year engineering student studying Bachelors of Technology (B.Tech.) in Electrical and Electronics Engineering (EEE) from Visvesvaraya National Institute of Technology (VNIT), Nagpur. My areas of interest include <b>image processing</b>, <b>traditional computer vision</b>, <b>signal processing</b> and an emerging interest in the applications of <b>deep learning in signal processing applications</b>. I have been working in the field of traditional computer vision or quite a while now and have done many projects and a publication in these fields. I have been doing projects to understand the fundamentals and the mathematics behind them. Planning a career in academia, I have always enjoyed learning from my projects and then apply them to various research problems. During my free time, I love to play chess, listen to music, and play games on my computer.</p>
       </div>
       <!-- About Section Button -->
       <div class="text-center mt-5">
@@ -462,7 +462,7 @@
                 <span class="middot-divider"></span>
                 <span>VNIT, Nagpur, India</span>
            </div>   
-           <div class="card-text">Avanti Fellows is an NGO aiming at giving quality education primarily to the students of Jawahar Navodaya Vidyalaya (JNV).We mentor underprivileged students by giving them tips on IITJEE/NEET. Have been on one such assignment to Wardha.
+           <div class="card-text">Avanti Fellows is an NGO aiming at giving quality education primarily to the students of Jawahar Navodaya Vidyalaya (JNV). We mentor underprivileged students by giving them tips on IITJEE/NEET. I have been on one such assignment to Wardha.
            </div>
  
         </div>
@@ -635,9 +635,9 @@
 
       	<!-- card 6 -->
       <div class="card experience course">
-        <div class="card-body"><h4 class="card-title exp-title text-muted my-0"> Introduction to Deep Learning with PyTorch  </h4>
+        <div class="card-body"><h4 class="card-title exp-title text-muted my-0"> Deep Learning for Visual Computing  </h4>
             <p class="card-header-tabs text-primary ">
-              Facebook AI | Udacity 
+              IIT Kharagpur | NPTEL 
             </p>
         </div>
         </div>
@@ -656,10 +656,10 @@
         <br>
 
 
-        <div class="card experience course">
-        <div class="card-body"><h4 class="card-title exp-title text-muted my-0"> Audio Signal Processing for Music Applications</h4>
+       <div class="card experience course">
+        <div class="card-body"><h4 class="card-title exp-title text-muted my-0"> Modern Algebra  </h4>
             <p class="card-header-tabs text-primary ">
-              Xavier Serra and JOS III |<a href="https://www.coursera.org/learn/audio-signal-processing"_blank"> Coursera </a>
+              IIT Kanpur | NPTEL 
             </p>
         </div>
         </div>
@@ -796,7 +796,7 @@
                 <h4 class=" text-secondary text-uppercase mb-3">Abstract</h4>
                 <!-- Portfolio Modal - Text -->
 
-                <p class="mb-5 text-justify">This project focusses on the implementation of various conceptual aspects related to Image Stitchig using various techniques, such as planar Homography as well as Cylindrical Image Stitching using translational model. Given an input video sequence, we take the images in pairs, find the features using various novel techinques such as SIFT, SURF, ORB, etc., then perform feature matching techniques using Brute Force KNN method. In one case, we estimate the Homography Matrix between the two images used for geometric transformation of one of the images so as to stitch the two images together in accordance with the matched features. In another case, we first convert the images obtained in cylindrical domain and perform the featute detection, followed by feature matching. We then perform image stitching using Translational model, where only geometric translation of the image is done in otder to perforom the stitching.</p>
+                <p class="mb-5 text-justify">This project focusses on the implementation of various conceptual aspects related to Image Stitching using various techniques, such as planar Homography as well as Cylindrical Image Stitching using the translational model. Given an input video sequence, we take the images in pairs, find the features using various novel techniques such as SIFT, SURF, ORB, etc., then perform feature matching techniques using the Brute Force KNN method. In one case, we estimate the Homography Matrix between the two images used for the geometric transformation of one of the images to stitch the two images together following the matched features. In another case, we first convert the images obtained in the cylindrical domain and perform feature detection, followed by feature matching. We then perform image stitching using the Translational model, where the only geometric translation of the image is done to perform the stitching.</p>
 
                 <h4 class=" text-secondary text-uppercase mb-0">Final Implementation</h4>
                 <img class="img-fluid rounded mb-5 mt-4" src="img/portfolio/panorama.png" alt="">
@@ -898,7 +898,7 @@
                 <h4 class=" text-secondary text-uppercase mb-3">Abstract</h4>
                 <!-- Portfolio Modal - Text -->
 
-                <p class="mb-5 text-justify">Chaos Theory is a branch in mathematics, which deals with dynamic systems, involving a highly sensitive reaction of the output given a slight change of the input. Here, this is demonstrated using a well known circuit known as Chua's Circuit. Basically, it is a nonperiodic oscillator, that it, it produces an output waveform that never repeats. It is also known as the "paradigm of chaos". This was done as a project for Electronic Devices and Circuits course at VNIT Nagpur during my third semester. The implementation was done by replacing the Chua's Diode using transistors. The simulation is done on NI Multisim version 14.</p></p>
+                <p class="mb-5 text-justify">Chaos Theory is a branch in mathematics, which deals with dynamic systems, involving a highly sensitive reaction of the output given a slight change of the input. Here, this is demonstrated using a famous circuit known as Chua's Circuit. It is a nonperiodic oscillator, that is, it produces an output waveform that never repeats. It is also known as the "paradigm of chaos". This was done as a project for Electronic Devices and Circuits course at VNIT Nagpur during my third semester. The implementation was done by replacing the Chua's Diode using transistors. The simulation is done on NI Multisim version 14.</p></p>
 
                 <h4 class=" text-secondary text-uppercase mb-0">Output</h4>
                 <img class="img-fluid rounded mb-5 mt-4" src="img/portfolio/Chaos.png" alt="">
@@ -956,7 +956,7 @@
 
 
                 <h4 class=" text-secondary text-uppercase mb-1 mt-2 text-center">Abstract</h4>
-                <p class="mb-5 text-justify">The project aims at understanding the working of visual odometry. An odometer is a small gadget that tells you how much distance it has travelled on the robot or car to which it is attached to. The way in which it works internally varies different types of gadgets and on the robot to which it is attached to. In robotics, a more generalized definition of odometry is considered, estimating the trajectory of the moving robot, along with the distance travelled. So, it is easy to see that for each position of the robot or car, there is an associated vector showing its pose in terms of cartesian coordinates and euler angles. In this project, we aim at understanding at doing the same using a camera. So, given the input trajectory of the robot, we are required to construct its 6 DOF trajectory. If we use a single camera, it is known as Monocular Visual Odometry and if we are using two or more, then it is termed as Stereo Visual Odometry. <b>The project is currently in progress.</b></p>
+                <p class="mb-5 text-justify">The project aims at understanding the working of visual odometry. An odometer is a small gadget that tells you how much distance it has traveled on the robot or car to which it is attached to. How it works internally varies different types of gadgets and on the robot to which it is attached to. In robotics, a more generalized definition of odometry is considered, estimating the trajectory of the moving robot, along with the distance traveled. So, it is easy to see that for each position of the robot or car, there is an associated vector showing its pose in terms of cartesian coordinates and Euler angles. In this project, we aim at understanding at doing the same using a camera. So, given the input trajectory of the robot, we are required to construct its 6 DOF trajectory. If we use a single camera, it is known as Monocular Visual Odometry and if we are using two or more, then it is termed as Stereo Visual Odometry. <b>The project is currently in progress.</b></p>
 
 
 
@@ -1012,7 +1012,7 @@
                 
 
                 <h4 class=" text-secondary text-uppercase mb-3 mt-2 text-center ">Abstract</h4>
-                <p class="mb-5 text-justify"> This was a project done for selection to Technoseason 1 Image Processing Task for IvLabs. Basically, we had to make a program that is able to take the input hand gestures as our input and give its equivalent meaning in terms of American Sign Language Digits. There are various approaches to tackle this problem, however I went through a more traditional route. The image was taken, converted to HSV in order to perform color thresholding of the skin. The contour was obtained and convex hull was performed in order to find the defects in the contour. Those defects were filtered using different equations and constraints. In order to make the corners more sharp, the hand was eroded in order to find the distinct points. The code was written in python3. This solution made our team stand second in the Technoseason Recruitment Drive.</p>
+                <p class="mb-5 text-justify"> This was a project done for selection to Technoseason 1 Image Processing Task for IvLabs. We had to make a program that can take the input hand gestures as our input and give its equivalent meaning in terms of American Sign Language Digits. There are various approaches to tackle this problem, however, I went through a more traditional route. The image was taken, converted to HSV to perform the color thresholding of the skin. The contour was obtained and the convex hull was performed to find the defects in the contour. Those defects were filtered using different equations and constraints. To make the corners sharper, the hand was eroded to find the distinct points. The code was written in python3. This solution made our team stand second in the Technoseason Recruitment Drive.</p>
 
 
                 <div class="row text-center d-flex justify-content-center">
@@ -1138,7 +1138,7 @@
                 <h4 class=" text-secondary text-uppercase mb-3">Abstract</h4>
                 <!-- Portfolio Modal - Text -->
 
-                <p class="mb-5 text-justify">The hand gesture controlled bot is a bot which receives it commands by giving pitch and roll to hand. This is helpful for people on wheelchair who can't even move their fingers or hands.These bots are very useful in many applications like remote surveillance, military etc. Hand gesture controlled robot can be used by physically challenged people for wheelchair control .Hand gesture controlled industrial grade robotic arms can be developed.</p>
+                <p class="mb-5 text-justify">The hand gesture controlled bot is a bot that receives its commands by giving pitch and roll to hand. This is helpful for people in a wheelchair who can't even move their fingers or hands. These bots are very useful in many applications like remote surveillance, military, etc. Hand gesture controlled robot can be used by physically challenged people for wheelchair control. Hand gesture controlled industrial-grade robotic arms can be developed.</p>
 
                 <h4 class=" text-secondary text-uppercase mb-0">Circuit Diagram</h4>
                 <img class="img-fluid rounded mb-5 mt-4" src="https://user-images.githubusercontent.com/40535193/47768192-f419c900-dcfc-11e8-91c6-df5689163fbf.jpg" alt="">
