--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-  <meta name="google-site-verification" content="KRzCr5H86LGpuqVJ5t0Zavn3gIP6_2iTQdTQ3OB9XO4" />
+  
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="My Portfolio">
+  <meta name="author" content="Arihant Gaur">
 
   <title>Arihant Gaur | Student</title>
 
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
   <!-- Theme CSS -->
-  <link href="css/freelancer.min.css" rel="stylesheet">
+  <link href="css/freelancer.css" rel="stylesheet">
 
 </head>
 
@@ -52,7 +52,7 @@
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#courses">Courses</a>
           </li>
           <li class="nav-item mx-0 mx-lg-0">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="https://drive.google.com/file/d/10vLzUeNlClkqRo1Vh-qCR3oTMSyitMXb/view?usp=sharing" target="_blank">CV</a>
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="https://drive.google.com/file/d/10vLzUeNlClkqRo1Vh-qCR3oTMSyitMXb/view?usp=sharing" target="_blank">Résumé</a>
           </li>
 
         </ul>
@@ -75,7 +75,7 @@
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
+          <i class="fas fa-user"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -118,7 +118,7 @@
       <div class="divider-custom">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
+          <i class="fas fa-user"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -132,7 +132,7 @@
       <div class="text-center mt-5">
         <a class="btn btn-xl btn-outline-primary" href="https://drive.google.com/file/d/10vLzUeNlClkqRo1Vh-qCR3oTMSyitMXb/view?usp=sharing"  target="_blank">
           <i class="fas fa-download mr-2"></i>
-          Curriculum Vitae
+          Résumé
         </a>
       </div>
 
@@ -151,7 +151,7 @@
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
+          <i class="fas fa-user"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -225,7 +225,7 @@
       <div class="divider-custom">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
+          <i class="fas fa-user"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -238,7 +238,7 @@
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#personfollower">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
-                <i class="fas fa-plus fa-3x"></i>
+                <i class="fas fa-eye fa-2x"></i>
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio/matches.jpg" alt="">
@@ -251,7 +251,7 @@
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#numberplate">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
-                <i class="fas fa-plus fa-3x"></i>
+                <i class="fas fa-eye fa-2x"></i>
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio/number.webp" alt="">
@@ -264,7 +264,7 @@
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#selfbalance">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
-                <i class="fas fa-plus fa-3x"></i>
+                <i class="fas fa-eye fa-2x"></i>
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio/chua.svg" alt="">
@@ -277,7 +277,7 @@
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#wordemb">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
-                <i class="fas fa-plus fa-3x"></i>
+                <i class="fas fa-eye fa-2x"></i>
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio/Ik.png" alt="">
@@ -290,7 +290,7 @@
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#mnist">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
-                <i class="fas fa-plus fa-3x"></i>
+                <i class="fas fa-eye fa-2x"></i>
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio/ASLD.jpg" alt="">
@@ -303,7 +303,7 @@
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#harmonicmotion">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
-                <i class="fas fa-plus fa-3x"></i>
+                <i class="fas fa-eye fa-2x"></i>
               </div>
             </div>
             <img class="img-fluid" src="img/portfolio/cover.jpg" alt="">
@@ -328,7 +328,7 @@
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
+          <i class="fas fa-user"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -491,7 +491,7 @@
       <div class="divider-custom">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
+          <i class="fas fa-user"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -617,7 +617,7 @@
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
+          <i class="fas fa-user"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -787,7 +787,7 @@
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
                   <div class="divider-custom-icon">
-                    <i class="fas fa-star"></i>
+                    <i class="fas fa-user"></i>
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
@@ -842,7 +842,7 @@
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
                   <div class="divider-custom-icon">
-                    <i class="fas fa-star"></i>
+                    <i class="fas fa-user"></i>
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
@@ -889,7 +889,7 @@
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
                   <div class="divider-custom-icon">
-                    <i class="fas fa-star"></i>
+                    <i class="fas fa-user"></i>
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
@@ -946,7 +946,7 @@
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
                   <div class="divider-custom-icon">
-                    <i class="fas fa-star"></i>
+                    <i class="fas fa-user"></i>
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
@@ -1003,7 +1003,7 @@
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
                   <div class="divider-custom-icon">
-                    <i class="fas fa-star"></i>
+                    <i class="fas fa-user"></i>
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
@@ -1063,7 +1063,7 @@
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
                   <div class="divider-custom-icon">
-                    <i class="fas fa-star"></i>
+                    <i class="fas fa-user"></i>
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
@@ -1129,7 +1129,7 @@
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
                   <div class="divider-custom-icon">
-                    <i class="fas fa-star"></i>
+                    <i class="fas fa-user"></i>
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
@@ -1189,7 +1189,7 @@
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
                   <div class="divider-custom-icon">
-                    <i class="fas fa-star"></i>
+                    <i class="fas fa-user"></i>
                   </div>
                   <div class="divider-custom-line"></div>
                 </div>
