--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <!-- About Section Content -->
 
       <div class="lead text-justify text-black mb-5">
-          <p> Hello! I am a second year engineering student studying Bachelors of Technology (B.Tech.) in Electrical and Electronics Engineering (EEE) from Visvesvaraya National Institute of Technology (VNIT), Nagpur. My areas of interest include <b>image processing</b>, <b>traditional computer vision</b>, <b>signal processing</b> and an emerging interest in the applications of <b>deep learning in signal processing applications</b>. I have been working in the field of traditional computer vision or quite a while now and have done many projects and a publication in these fields. I have been doing projects to understand the fundamentals and the mathematics behind them. Planning a career in academia, I have always enjoyed learning from my projects and then apply them to various research problems. During my free time, I love to play chess, listen to music, and play games on my computer.</p>
+          <p> Hello! I am a second-year engineering student studying Bachelors of Technology (B.Tech.) in Electrical and Electronics Engineering (EEE) from Visvesvaraya National Institute of Technology (VNIT), Nagpur. My areas of interest include image processing, computer vision, signal processing and an emerging interest in the applications of deep learning in signal processing. I have been working in the field of Computer Vision, particularly multiview geometry for quite a while now and have done many projects and a publication. I have been doing projects to understand the fundamentals and the mathematics behind them. Planning a career in academia, I have always enjoyed learning from my projects and then apply them to various research problems.</p>
       </div>
       <!-- About Section Button -->
       <div class="text-center mt-5">
@@ -235,7 +235,7 @@
 
         <!-- Portfolio Item 1 -->
         <div class="col-md-6 col-lg-4">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#personfollower">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#stitching">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
                 <i class="fas fa-eye fa-2x"></i>
@@ -261,7 +261,7 @@
 
         <!-- Portfolio Item 3 -->
         <div class="col-md-6 col-lg-4">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#selfbalance">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#chaos">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
                 <i class="fas fa-eye fa-2x"></i>
@@ -274,7 +274,7 @@
                
         <!-- Portfolio Item 4 -->
         <div class="col-md-6 col-lg-4">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#wordemb">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#visod">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
                 <i class="fas fa-eye fa-2x"></i>
@@ -287,7 +287,7 @@
 
         <!-- Portfolio Item 5 -->
         <div class="col-md-6 col-lg-4">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#mnist">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#asl">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
                 <i class="fas fa-eye fa-2x"></i>
@@ -300,7 +300,7 @@
 
         <!-- Portfolio Item 6 -->
         <div class="col-md-6 col-lg-4">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#harmonicmotion">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#ccufg">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
                 <i class="fas fa-eye fa-2x"></i>
@@ -754,7 +754,7 @@
 <!-- ######################################## Portfolio Modals ########################################-->
 
   <!-- Portfolio Modal 1 -->
-  <div class="portfolio-modal modal fade" id="personfollower" tabindex="-1" role="dialog" aria-labelledby="personfollowerLabel" aria-hidden="true">
+  <div class="portfolio-modal modal fade" id="stitching" tabindex="-1" role="dialog" aria-labelledby="stitchingLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl" role="document">
       <div class="modal-content">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -856,7 +856,7 @@
 
 
   <!-- Portfolio Modal 3 -->
-  <div class="portfolio-modal modal fade" id="selfbalance" tabindex="-1" role="dialog" aria-labelledby="selfbalanceLabel" aria-hidden="true">
+  <div class="portfolio-modal modal fade" id="chaos" tabindex="-1" role="dialog" aria-labelledby="chaosLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl" role="document">
       <div class="modal-content">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -913,7 +913,7 @@
   </div>
 
   <!-- Portfolio Modal 4 -->
-  <div class="portfolio-modal modal fade" id="wordemb" tabindex="-1" role="dialog" aria-labelledby="pwordembLabel" aria-hidden="true">
+  <div class="portfolio-modal modal fade" id="visod" tabindex="-1" role="dialog" aria-labelledby="visodLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl" role="document">
       <div class="modal-content">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -970,7 +970,7 @@
   </div>
 
   <!-- Portfolio Modal 5 -->
-  <div class="portfolio-modal modal fade" id="mnist" tabindex="-1" role="dialog" aria-labelledby="mnistLabel" aria-hidden="true">
+  <div class="portfolio-modal modal fade" id="asl" tabindex="-1" role="dialog" aria-labelledby="aslLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl" role="document">
       <div class="modal-content">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -1030,7 +1030,7 @@
   </div>
 
   <!-- Portfolio Modal 6 -->
-  <div class="portfolio-modal modal fade" id="harmonicmotion" tabindex="-1" role="dialog" aria-labelledby="harmonicmotionLabel" aria-hidden="true">
+  <div class="portfolio-modal modal fade" id="ccufg" tabindex="-1" role="dialog" aria-labelledby="ccufgLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl" role="document">
       <div class="modal-content">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
