--- a/index.html
+++ b/index.html
@@ -633,10 +633,16 @@
         </div>
         </div>
         <br>
+        
+      <div class="card experience course">
+        <div class="card-body"><h4 class="card-title exp-title text-muted my-0"> Digital Image Processing  </h4>
+            <p class="card-header-tabs text-primary ">
+              IIT Kharagpur | NPTEL 
+            </p>
+        </div>
+        </div>
+        <br>
 
-
-
-      
 
         <!-- card 7 -->
 
