--- a/index.html
+++ b/index.html
@@ -877,7 +877,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0 text-center">Chaos Theory Demostration in Chua's Circuit</h2>
+                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0 text-center">Stereo 3D Reconstruction</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -887,7 +887,7 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-4" src="img/portfolio/chua.svg" alt="">
+                <img class="img-fluid rounded mb-4" src="img/portfolio/stereo.png" alt="">
                 <h4 class=" text-secondary text-uppercase mb-3">Abstract</h4>
                 <!-- Portfolio Modal - Text -->
 
