--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       </div>
 
       <!-- Masthead Subheading -->
-      <p class="masthead-subheading font-weight-light mb-0">Computer Vision | Signal Processing</p>
+      <p class="masthead-subheading font-weight-light mb-0">Computer Vision | Multiview Geometry</p>
 
       <div class="col-lg-4 mb-5 mb-lg-0 ">
       	<br>
@@ -128,7 +128,7 @@
       <!-- About Section Content -->
 
       <div class="lead text-justify text-black mb-5">
-          <p> Hello! I am a second-year engineering student studying Bachelors of Technology (B.Tech.) in Electrical and Electronics Engineering (EEE) from Visvesvaraya National Institute of Technology (VNIT), Nagpur. My areas of interest include image processing, computer vision, signal processing and an emerging interest in the applications of deep learning in signal processing. I have been working in the field of Computer Vision, particularly multiview geometry for quite a while now and have done many projects and a publication. I have been doing projects to understand the fundamentals and the mathematics behind them. Planning a career in academia, I have always enjoyed learning from my projects and then apply them to various research problems.</p>
+          <p> Hello! I am a third-year engineering student studying Bachelors of Technology (B.Tech.) in Electrical and Electronics Engineering (EEE) from Visvesvaraya National Institute of Technology (VNIT), Nagpur. My areas of interest include image processing, computer vision, signal processing, deep learning and emerging interest in abstract mathematics. I have been working on computer vision, particularly multiview geometry for quite a while now and have done many projects and a publication. I have been doing projects to understand the fundamentals and the mathematics behind them. Planning a career in academia, I have always enjoyed learning from my projects and then apply them to various research problems.</p>
       </div>
       <!-- About Section Button -->
       <div class="text-center mt-5">
@@ -654,7 +654,29 @@
         </div>
         </div>
         <br>
+        
+      <div class="card experience course">
+        <div class="card-body"><h4 class="card-title exp-title text-muted my-0"> Linear Algebra  </h4>
+            <p class="card-header-tabs text-primary ">
+              Gilbert Strang | MIT OCW 
+            </p>
+        </div>
+        </div>
+        <br>         
 
+        <!-- card 9 -->
+        <div class="card experience course">
+        <div class="card-body"><h4 class="card-title exp-title text-muted my-0"> Statistics and Optimization Techniques </h4>
+        </div>
+        </div>  
+        <br>  
+
+        <!-- card 9 -->
+        <div class="card experience course">
+        <div class="card-body"><h4 class="card-title exp-title text-muted my-0"> Statistics and Optimization Techniques </h4>
+        </div>
+        </div>  
+        <br>  
 
 
         
